--- a/.github/workflows/gen-curriculum.yml
+++ b/.github/workflows/gen-curriculum.yml
@@ -13,11 +13,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Generate Curriculum
-        uses: misaelnieto/web_to_pdf_action@master
         with:
-          webPageURL: https://marcossilvestrini.github.io/portfolio/
-          outputFile: ./right-resume.pdf
-          usePuppeteer: true
-          useScreen: true
-          pdfOptions: '{"format": "Letter", "margin": {"top": "10mm", "left": "10mm", "right": "10mm", "bottom": "10mm"}}'
+            fetch-depth: 1
+      - name: Generate Curriculum
+        uses: fifsky/html-to-pdf-action@master
+        with:
+            htmlFile: ./index.html
+            outputFile: ./right-resume.pdf
+            pdfOptions: '{"margin": {"top": "1px", "left": "100px", "right": "100px", "bottom": "100px"}}'
