--- a/.github/workflows/gen-curriculum.yml
+++ b/.github/workflows/gen-curriculum.yml
@@ -12,15 +12,14 @@ jobs:
         os: [ubuntu-latest]
 
     steps:
-    #   - name: Checkout code
-    #     uses: actions/checkout@v2
-    #     with:
-    #       fetch-depth: 1     
+      - name: Checkout code
+        uses: actions/checkout@v2
+    
 
       - name: Convert HTML to PDF -  1
         uses: markwilson/html2pdf@v1.0
         with:
-            htmlPath: 'index.html'
+            htmlPath: 'test.html'
             pdfName: 'right-resume'
 
     #   - name: Convert HTML to PDF - 2
@@ -30,8 +29,8 @@ jobs:
     #       outputFile: ./right-resume.pdf
     #       pdfOptions: '{"margin": {"top": "1px", "left": "100px", "right": "100px", "bottom": "100px"}}'
 
-    #   - name: Upload artifacts
-    #     uses: actions/upload-artifact@v2
-    #     with:
-    #       name: CV PDF
-    #       path: ./right-resume.pdf
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: CV PDF
+          path: ./right-resume.pdf
