--- a/.github/workflows/gen-curriculum.yml
+++ b/.github/workflows/gen-curriculum.yml
@@ -1,4 +1,4 @@
-name: Generate CV
+name: Test Build Pdf
 
 on: [push, pull_request]
 
@@ -14,23 +14,18 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-    
-
-      - name: Convert HTML to PDF -  1
-        uses: markwilson/html2pdf@v1.0
         with:
-            htmlPath: 'test.html'
-            pdfName: 'right-resume'
+          fetch-depth: 1
 
-    #   - name: Convert HTML to PDF - 2
-    #     uses: fifsky/html-to-pdf-action@master
-    #     with:
-    #       htmlFile: ./index.html
-    #       outputFile: ./right-resume.pdf
-    #       pdfOptions: '{"margin": {"top": "1px", "left": "100px", "right": "100px", "bottom": "100px"}}'
+      - name: html to pdf
+        uses: fifsky/html-to-pdf-action@master
+        with:
+          htmlFile: ./example.html
+          outputFile: ./example.pdf
+          pdfOptions: '{"margin": {"top": "1px", "left": "100px", "right": "100px", "bottom": "100px"}}'
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: CV PDF
-          path: ./right-resume.pdf
+          name: Example PDF
+          path: ./example.pdf
