--- a/.github/workflows/gen-curriculum.yml
+++ b/.github/workflows/gen-curriculum.yml
@@ -29,5 +29,5 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: Upload CV 
-          path: ./right-resume.pdf
+          path: ./cv/right-resume.pdf
       - run: ls
