--- a/.github/workflows/curriculum.yml
+++ b/.github/workflows/curriculum.yml
@@ -22,28 +22,25 @@ jobs:
         with:
           htmlFile: ./index.html
           outputFile: ./right-resume.pdf
-          pdfOptions: '{"margin": {"top": "1px", "left": "100px", "right": "100px", "bottom": "100px"}}'
-      - run: ls
+          pdfOptions: '{"margin": {"top": "1px", "left": "100px", "right": "100px", "bottom": "100px"}}'      
 
       - name: Upload artifacts        
         uses: actions/upload-artifact@v3
         with:
           name: right-resume 
-          path: ./right-resume.pdf
-      - run: ls
-      - name: Download artifact
-        id: download-artifact
+          path: ./right-resume.pdf      
+      - name: Download artifact        
         uses: dawidd6/action-download-artifact@v2
         with:                        
             #workflow: curriculum.yml            
             workflow_conclusion: success            
-            pr: ${{github.event.pull_request.number}}            
-            commit: ${{github.event.pull_request.head.sha}}            
+            #pr: ${{github.event.pull_request.number}}            
+            #commit: ${{github.event.pull_request.head.sha}}            
             branch: master            
             event: push                                                        
             name: right-resume            
-            check_artifacts: false            
-            search_artifacts: false            
+            #check_artifacts: false            
+            #search_artifacts: false            
             skip_unpack: false
             # Optional, choose how to exit the action if no artifact is found
             # can be one of:
