--- a/.github/workflows/curriculum.yml
+++ b/.github/workflows/curriculum.yml
@@ -28,7 +28,8 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: right-resume 
-          path: ./right-resume.pdf      
+          path: ./right-resume.pdf    
+
       - name: Download artifact
         id: download-artifact
         uses: dawidd6/action-download-artifact@v2
@@ -40,7 +41,7 @@ jobs:
             
             # Optional, workflow file name or ID
             # If not specified, will be inferred from run_id (if run_id is specified), or will be the current workflow
-            workflow: curriculum.yml
+            # workflow: curriculum.yml
             
             # Optional, the status or conclusion of a completed workflow to search for
             # Can be one of a workflow conclusion:
@@ -48,16 +49,16 @@ jobs:
             # Or a workflow status:
             #   "completed", "in_progress", "queued"
             # Use the empty string ("") to ignore status or conclusion in the search
-            workflow_conclusion: success
+            #workflow_conclusion: success
             
             # Optional, will get head commit SHA
-            pr: ${{github.event.pull_request.number}}
+            # pr: ${{github.event.pull_request.number}}
             
             # Optional, no need to specify if PR is
             #commit: ${{github.event.pull_request.head.sha}}
             
             # Optional, will use the specified branch. Defaults to all branches
-            branch: master
+            # branch: master
             
             # Optional, defaults to all types
             event: push
@@ -65,10 +66,10 @@ jobs:
             # Optional, will use specified workflow run
             # use ${{ github.event.workflow_run.id }} when your action runs in a workflow_run event
             # and wants to download from the triggering workflow run
-            run_id: ${{ github.event.workflow_run.id }}
+            # run_id: ${{ github.event.workflow_run.id }}
             
             # Optional, run number from the workflow
-            run_number: 34
+            # run_number: 34
             
             # Optional, uploaded artifact name,
             # will download all artifacts if not specified
@@ -86,16 +87,16 @@ jobs:
             #path: extract_here
             
             # Optional, defaults to current repo
-            repo: ${{ github.repository }}
+            #repo: ${{ github.repository }}
             
             # Optional, check the workflow run to whether it has an artifact
             # then will get the last available artifact from the previous workflow
             # default false, just try to download from the last one
-            check_artifacts: false
+            #check_artifacts: false
             
             # Optional, search for the last workflow run whose stored an artifact named as in `name` input
             # default false
-            search_artifacts: false
+            #search_artifacts: false
             
             # Optional, choose to skip unpacking the downloaded artifact(s)
             # default false
