--- a/.github/workflows/download-curriculum.yml
+++ b/.github/workflows/download-curriculum.yml
@@ -1,10 +1,10 @@
-name: Generate CV
+name: download-curriculum
 
 on: [push, pull_request]
 
 jobs:
-  html_to_pdf:
-    name: Generate PDF
+  download_curriculum:
+    name: download-curriculum
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -14,21 +14,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 1
-
-      - name: HTML to PDF
-        uses: fifsky/html-to-pdf-action@master
-        with:
-          htmlFile: ./index.html
-          outputFile: ./right-resume.pdf
-          pdfOptions: '{"margin": {"top": "1px", "left": "100px", "right": "100px", "bottom": "100px"}}'      
-
-      - name: Upload artifacts        
-        uses: actions/upload-artifact@v3
-        with:
-          name: right-resume 
-          path: ./right-resume.pdf    
 
       - name: Download artifact
         id: download-artifact
@@ -41,7 +26,7 @@ jobs:
             
             # Optional, workflow file name or ID
             # If not specified, will be inferred from run_id (if run_id is specified), or will be the current workflow
-            # workflow: curriculum.yml
+            workflow: generate-curriculum.yml
             
             # Optional, the status or conclusion of a completed workflow to search for
             # Can be one of a workflow conclusion:
@@ -49,7 +34,7 @@ jobs:
             # Or a workflow status:
             #   "completed", "in_progress", "queued"
             # Use the empty string ("") to ignore status or conclusion in the search
-            #workflow_conclusion: success
+            workflow_conclusion: completed
             
             # Optional, will get head commit SHA
             # pr: ${{github.event.pull_request.number}}
@@ -106,4 +91,4 @@ jobs:
             # can be one of:
             #  "fail", "warn", "ignore"
             # default fail
-            if_no_artifact_found: fail
+            if_no_artifact_found: warn
