--- a/.github/workflows/generate-curriculum.yml
+++ b/.github/workflows/generate-curriculum.yml
@@ -25,7 +25,8 @@ jobs:
           pdfOptions: '{"margin": {"top": "1px", "left": "100px", "right": "100px", "bottom": "100px"}}'      
       - run: sudo chmod 777 right-resume.pdf
       - run: /usr/bin/git add right-resume.pdf
-      - run: /usr/bin/git status
+      - run: /usr/bin/git commit -m "Add curriculum"
+      - run: /usr/bin/git push origin main
       
 
       - name: Upload artifacts        
