--- a/.github/workflows/generate-curriculum.yml
+++ b/.github/workflows/generate-curriculum.yml
@@ -24,6 +24,8 @@ jobs:
           outputFile: ./right-resume.pdf
           pdfOptions: '{"margin": {"top": "1px", "left": "100px", "right": "100px", "bottom": "100px"}}'      
       - run: sudo chmod 777 right-resume.pdf
+      - run: /usr/bin/git config --global user.email "marcos.silvestrini@gmail.com"
+      - run: /usr/bin/git config --global user.name "marcossilvestrini"
       - run: /usr/bin/git add right-resume.pdf
       - run: /usr/bin/git commit -m "Add curriculum"
       - run: /usr/bin/git push origin main
