--- a/.github/workflows/generate-curriculum.yml
+++ b/.github/workflows/generate-curriculum.yml
@@ -23,7 +23,8 @@ jobs:
           htmlFile: ./index.html
           outputFile: ./right-resume.pdf
           #pdfOptions: '{"margin": {"top": "1px", "left": "100px", "right": "100px", "bottom": "100px"}}'      
-          pdfOptions: '{"format": "A4", "margin": {"top": "10mm", "left": "10mm", "right": "10mm", "bottom": "1000mm"}}'
+          #pdfOptions: '{"format": "A4", "margin": {"top": "10mm", "left": "10mm", "right": "10mm", "bottom": "10mm"}}'
+          pdfOptions: '{"format": "A4", "margin": {"top": "100mm", "left": "100mm", "right": "100mm", "bottom": "100mm"}}'
       - run: sudo chmod 777 right-resume.pdf
       - run: /usr/bin/git config --global user.email "marcos.silvestrini@gmail.com"
       - run: /usr/bin/git config --global user.name "marcossilvestrini"
