--- a/.github/workflows/generate-curriculum.yml
+++ b/.github/workflows/generate-curriculum.yml
@@ -24,7 +24,18 @@ jobs:
           outputFile: ./right-resume.pdf
           #pdfOptions: '{"margin": {"top": "1px", "left": "100px", "right": "100px", "bottom": "100px"}}'      
           pdfOptions: '{"format": "A4", "margin": {"top": "10mm", "left": "10mm", "right": "10mm", "bottom": "10mm"}}'          
-      
+
+      - name: Upload artifacts        
+        uses: actions/upload-artifact@v3
+        with:
+          name: right-resume 
+          path: ./right-resume.pdf
+  
+      - name: Download Artefacts
+        uses: actions/download-artifact@v3
+        with:
+          name: right-resume
+
       - name: Push Curriculum to Repository      
         run: |
           sudo chmod 777 right-resume.pdf
@@ -33,17 +44,6 @@ jobs:
           /usr/bin/git add right-resume.pdf
           /usr/bin/git commit -m "Add curriculum"
           /usr/bin/git push origin main
-    
-      # - name: Upload artifacts        
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: right-resume 
-      #     path: ./right-resume.pdf
 
-      # - name: Download Artefacts
-      #   uses: actions/download-artifact@v3
-      #   with:
-      #     name: right-resume
-            
       # - name: Display structure of downloaded files
       #   run: sudo ls -R
